about me section & spacing fix

--- a/css/sections/_about.scss
+++ b/css/sections/_about.scss
@@ -1,7 +1,9 @@
 .about {
-    display: grid;
-    position: relative;
-    &::before {
+	display: grid;
+	place-content: center;
+	position: relative;
+	min-height: 100vh;
+	&::before {
 		content: '';
 		width: 100%;
 		height: 100%;
@@ -56,5 +58,23 @@
 				transparent 32px
 			),
 			linear-gradient(90deg, var(--accent-color), var(--accent-color2));
+	}
+	.container {
+		width: min(calc(100% - 2rem), 1600px);
+		margin: 0 auto;
+		p {
+			max-width:  1100px;
+			font-size: clamp(0.8rem, 1.2vw, 1rem);
+			margin-bottom: 20px;
+		}
+		.title {
+			margin-bottom: 0px;
+			background-image: linear-gradient(90deg, var(--accent-color2), var(--accent-color));
+			width: fit-content;
+			background-clip: text;
+			color: transparent;
+			font-size: clamp(1.2rem, 2.2vw, 2.2rem);
+			text-shadow: 0px 0px 10px var(--shadow-color);
+		}
 	}
 }
