--- a/css/sections/_work.scss
+++ b/css/sections/_work.scss
@@ -172,12 +172,12 @@
 			justify-content: center;
 			flex-direction: column;
 			border: 1px solid var(--accent-color);
-			backdrop-filter: blur(8px);
 			padding: 20px;
 			width: 605px;
 			margin-right: -80px;
 			z-index: 1;
 			box-shadow: 0px 0px 10px var(--accent-color);
+			backdrop-filter: blur(8px) !important;
 			svg {
 				stroke: var(--text-color);
 				fill: none;
@@ -185,7 +185,7 @@
 				transition: 150ms linear;
 			}
 			.project-title {
-				font-size: clamp(1.5rem, 2.5vw, 2.5rem);
+				font-size: clamp(1.3rem, 2.3vw, 2.3rem);
 				color: var(--accent-color);
 			}
 			.project-info {
@@ -198,13 +198,13 @@
 			.project-links {
 				display: flex;
 				flex-direction: column;
-				gap: 5px;
+				gap: 2px;
 				p {
-					font-size: clamp(1rem, 1vw, 1.4rem);
+					font-size: clamp(0.9rem, 1vw, 1.4rem);
 				}
 				ul {
 					display: flex;
-					gap: 10px;
+					gap: 8px;
 					li {
 						display: grid;
 						place-content: center;
