--- a/css/style.scss
+++ b/css/style.scss
@@ -26,6 +26,7 @@ body {
 }
 section {
 	min-height: 100vh;
+	padding-block: 40px;
 }
 #cursor {
 	position: fixed;
